Aosip Logo style [1/2]
* Adapt to AicpExtras
Change-Id: I227f60ab17279da096998a7733efb74fd7ea7b64

Conflicts:
	res/values/array.xml
	res/values/strings.xml
	res/xml/statusbar_layout.xml
	src/com/lordclockan/aicpextras/StatusBarFragment.java

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -967,6 +967,9 @@
     <string name="status_bar_aosip_logo_title">AOSIP logo</string>
     <string name="status_bar_aosip_logo_summary">Enable to show AOSIP logo on the left side of statusbar</string>
     <string name="status_bar_aosip_logo_color">AOSIP logo color</string>
-
+    <string name="status_bar_aosip_logo_position">Logo location</string>
+    <string name="status_bar_aosip_logo_position_summary">Choose which side to display the logo on, left or right</string>
+    <string name="status_bar_logo_position_right">Right</string>
+    <string name="status_bar_logo_position_left">Left</string>
 
 </resources>
