--- a/res/layout/tab_ui.xml
+++ b/res/layout/tab_ui.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="48dip"
         android:elevation="8dp"
-        android:textColor="@color/text_color_white"
+        android:gravity="center"
+        android:textColor="@color/owlsnest_tab_text_color"
         android:background="@drawable/switchbar_background" />
 
     <android.support.v4.view.ViewPager
