--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -204,6 +204,18 @@
     <string name="navigation_bar_size_0_dp">0 dp (off)</string>
     <string name="navigation_bar_on_off">Disable the navigation bar</string>
     <string name="navigation_bar_dimen">Customize the hieght and width of the navigation bar</string>
+    <!-- SlimDim -->
+    <string name="dim_nav_buttons_category">SlimDim</string>
+    <string name="dim_nav_buttons_title">Dim buttons after inactivity</string>
+    <string name="dim_nav_buttons_summary">Dim navigation bar buttons after not interacting with navigation bar for a specified time</string>
+    <string name="dim_nav_buttons_timeout_title">Timeout before dimming</string>
+    <string name="dim_nav_buttons_timeout_summary">Time (in milliseconds) to wait before dimming buttons</string>
+    <string name="dim_nav_buttons_alpha_title">Dim alpha</string>
+    <string name="dim_nav_buttons_alpha_summary">Alpha value to dim buttons to</string>
+    <string name="dim_nav_buttons_animate_title">Dim animation</string>
+    <string name="dim_nav_buttons_animate_summary">Animate the alpha fade</string>
+    <string name="dim_nav_buttons_animate_duration_title">Animation duration</string>
+    <string name="dim_nav_buttons_animate_duration_summary">Duration (in milliseconds) of the alpha animation</string>
 
     <!--Owlsnest Quick settings-->
     <string name="quicksettings_title">Quick settings</string>
