Squash animation options Listview system and toast See frameworks for authorship https://github.com/AOSIP/platform_frameworks_base/commit/855af5731b4379f42cb4c524cc32b0deb6d1691f https://github.com/AOSIP/platform_frameworks_base/commit/f63c3929c709e76c5da66f53ecc5433c15324c6c https://github.com/AOSIP/platform_frameworks_base/commit/c20c228ed7781e2c01a16e836eeaf1943fb6aa5c

--- a/res/xml/aosip_advanced.xml
+++ b/res/xml/aosip_advanced.xml
@@ -30,5 +30,9 @@
         android:title="@string/gestureanywhere_category"
         android:fragment="com.android.settings.benzo.gestureanywhere.GestureAnywhereSettings" />
 
+    <PreferenceScreen
+        android:key="animation_settings"
+        android:title="@string/animation_title"
+        android:fragment="com.android.settings.aosip.advanced.AnimationSettings" />
 </PreferenceScreen>
 
