--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -26,6 +26,7 @@
     <string name="palette_rgb_title">RGB</string>
     <string name="reset_android_title">Android default</string>
     <string name="reset_darkkat_title">AOSiP default</string>
+    <string name="link_volume_option_title">Link ringtone &amp; notification volumes</string>
 
     <!-- General strings -->
     <string name="ok">OK</string>
