--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -631,4 +631,8 @@
     <!-- Toast Icons -->
     <string name="toast_icon_title">Toast icon</string>
     <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
+
+    <!-- Lockscreen Torch toggle -->
+    <string name="keyguard_torch_title">Lockscreen torch</string>
+    <string name="keyguard_torch_summary">Longpress power button with screen off turns on torch</string>
 </resources>
