Longpress back to kill app [2/2]
Originating commit from rascarlo - rascarlo/android_frameworks_base@cc7cbd4

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -773,4 +773,8 @@
     <!-- Toast Icons -->
     <string name="toast_icon_title">Toast icon</string>
     <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
+
+    <!-- kill app long press back -->
+    <string name="kill_app_longpress_back">Kill app back button</string>
+    <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back key</string>
 </resources>
