--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -851,4 +851,6 @@
     <string name="notification_volume_option_title">Notification volume</string>
     <string name="ring_notification_volume_option_title">Ring and notification volume</string>
 
+    <!-- QS shade transparency -->
+    <string name="qs_transparent_shade">QS shade transparency</string>
 </resources>
