QS header transparency, Power/reboot menu transparency
Credit aicp: https://github.com/AICP/packages_apps_AicpExtras/commit/d369ead520f546665081431a8eff19ec9db23af9
https://github.com/AICP/packages_apps_AicpExtras/commit/05e5f262bb64a03f49225db42dc41a13cc42f1e3

Also moved shade transparency to tile screen

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -853,4 +853,8 @@
 
     <!-- QS shade transparency -->
     <string name="qs_transparent_shade">QS shade transparency</string>
+    <!-- QS header transparency -->
+    <string name="qs_transparent_header">QS header transparency</string>
+    <!-- Power menu and dialogs transparency -->
+    <string name="power_menu_transparency">Power/reboot menu transparency</string>
 </resources>
