--- a/res/xml/aosip_tiles.xml
+++ b/res/xml/aosip_tiles.xml
@@ -52,5 +52,12 @@
             android:title="@string/quick_settings_vibrate_title"
             android:summary="@string/quick_settings_vibrate_summary"
             android:defaultValue="false"/>
+
+    <com.android.settings.aosip.seekbar.SeekBarPreference
+            android:key="qs_transparent_shade"
+            android:title="@string/qs_transparent_shade"
+            android:max="255"
+            settings:minimum="0"
+            android:persistent="false" />
 </PreferenceScreen>
 
