Volume dialog transparency again credit to aicp https://github.com/AICP/packages_apps_AicpExtras/commit/2280d9d5c5f6440ff2dd7ca14530869763e4a3db

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -253,7 +253,7 @@
 
     <!--Owlsnest buttons-->
     <string name="buttons_title">Hardware buttons</string>
-    <string name="buttons_summary">Tweak the actions of your volume and power buttons</string>
+    <string name="buttons_summary">Tweak the actions of your volume/power buttons and dialogs</string>
     <string name="powermenu_category">Power button</string>
     <string name="volume_category">Volume buttons</string>
     <!--Volume rocker cursor control -->
@@ -857,4 +857,6 @@
     <string name="qs_transparent_header">QS header transparency</string>
     <!-- Power menu and dialogs transparency -->
     <string name="power_menu_transparency">Power/reboot menu transparency</string>
+    <!-- Volume dialog transparency -->
+    <string name="volume_dialog_transparency">Volume dialog transparency</string>
 </resources>
