--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -873,6 +873,9 @@
     <string name="trigger_bottom_title">Trigger height</string>
     <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
 
+    <!-- Aosip Extras Title -->
+    <string name="aosip_extras">AOSiP Extras</string>
+
     <!-- Dashboard columns -->
     <string name="dashboard_columns_title">Dashboard Columns</string>
     <string name="dashboard_columns_summary">Change the number of columns displayed in the dashboard</string>
@@ -882,7 +885,6 @@
     <string name="dashboard_columns_three">Three</string>
 
     <!-- Dashboard tileview double lines -->
-    <string name="dashboard_category">Dashboard settings</string>
     <string name="dashboard_tileview_double_lines_title">Dashboard tile view title</string>
     <string name="dashboard_tileview_double_lines_summary_on">Show dashboard tile titles in 1 line</string>
     <string name="dashboard_tileview_double_lines_summary_off">Show dashboard tile titles in 2 lines</string>
