Dashoard tileview dividers toggle [2/2]
Inspired once again by @xWASABI in a commit where he allowed for themers to hide
the dividers via styles, I figure we could make this configurable without installing
a theme :-)

https://github.com/TeamTwisted/packages_apps_Settings/commit/d72a5999b4e441784fea53bd89f487bbd0d0424c

- Cleaned up some of the strings for previous dashboard-like commits

See images :
http://i.imgur.com/unf5BCy.png
http://i.imgur.com/kPQA766.png
http://i.imgur.com/At7b6FQ.png
http://i.imgur.com/ZEvxHOT.png

Change-Id: Ie47ddf09f577831dcc1bb2affb12b30f425849c8

Conflicts:
	res/values/custom_strings.xml
	res/xml/display_settings.xml

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -885,9 +885,10 @@
     <string name="dashboard_columns_three">Three</string>
 
     <!-- Dashboard tileview double lines -->
-    <string name="dashboard_tileview_double_lines_title">Dashboard tile view title</string>
-    <string name="dashboard_tileview_double_lines_summary_on">Show dashboard tile titles in 1 line</string>
-    <string name="dashboard_tileview_double_lines_summary_off">Show dashboard tile titles in 2 lines</string>
+    <string name="dashboard_tileview_double_lines_title">Title view</string>
+    <string name="dashboard_tileview_double_lines_summary">Show dashboard tile titles in 2 lines</string>
+    <string name="dashboard_tileview_dividers_title">Divider lines</string>
+    <string name="dashboard_tileview_dividers_summary">Hide the dashboard tile dividers</string>
 
     <!-- Heads up -->
     <string name="headsup_section_header">Heads up notifications</string>
