Settings: More Lockscreen Colors [2/2]
Conflicts:
	res/values/rr_strings.xml
	res/xml/rr_ls_ui.xml

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -940,6 +940,8 @@
     <string name="lockscreen_indication_text_color">Lockscreen Indication text</string>
     <string name="lockscreen_clock_color">Lockscreen Clock</string>
     <string name="lockscreen_clock_date_color">Lockscreen Date</string>
+    <string name="lockscreen_owner_info_color">Owner info</string>
+    <string name="lockscreen_alarm_color">Alarm</string>
     <string name="lockscreen_colors_reset_title">Reset lockscreen colors</string>
     <string name="lockscreen_colors_reset_message">Are you sure you want to reset these colors to default?</string>
     <string name="yes">YES</string>
