--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -891,6 +891,13 @@
     <string name="dashboard_tileview_dividers_title">Divider lines</string>
     <string name="dashboard_tileview_dividers_summary">Hide the dashboard tile dividers</string>
 
+    <!-- Optional Dashboard Switches -->
+    <string name="dashboard_switches_title">Dashboard Switches</string>
+    <string name="dashboard_switches_off">Switches Off</string>
+    <string name="dashboard_switches_on">Switches On</string>
+    <string name="dashboard_switches_summary">Change the position of the dashboard switches</string>
+    <string name="dashboard_switches_dialog_title">Select switch state</string>
+
     <!-- Heads up -->
     <string name="headsup_section_header">Heads up notifications</string>
     <string name="heads_up_notifications">Heads up</string>
