--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -861,4 +861,17 @@
         <item>0</item>
         <item>1</item>
     </string-array>
+
+    <!-- Custom logos  -->
+    <string-array name="custom_logo_entries">
+        <item>@string/logo0</item>
+        <item>@string/logo1</item>
+        <item>@string/logo2</item>
+    </string-array>
+
+    <string-array name="custom_logo_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
