--- a/res/values/cm_colors.xml
+++ b/res/values/cm_colors.xml
@@ -73,8 +73,6 @@ limitations under the License.
     <!-- Storage Summary Hard colors-->
     <color name="storage_summary_text_color">#ff607d8b</color>
     <color name="storage_summary_used_text_color">#8a000000</color>
-<<<<<<< HEAD
-=======
     <color name="storage_volume_color_public">#ff9e9e9e</color>
     <color name="storage_volume_color_warning">#fff4511e</color>
     <color name="storage_volume_color_private1">#ff26a69a</color> <!-- teal -->
@@ -83,11 +81,6 @@ limitations under the License.
     <color name="storage_volume_color_private4">#ffec407a</color> <!-- pink -->
     <color name="storage_volume_color_private5">#ffc0ca33</color> <!-- green -->
     <color name="eject_icon_tint_color">#8a000000</color>
-    <!-- Contributors -->
-    <color name="contributors_cloud_fg_color">@color/theme_accent</color>
-    <color name="contributors_cloud_selected_color">#ff5252</color>
->>>>>>> 5a5eb74... Themes: Expose Hard colors for storage settings
-
     <color name="external_tile_icon_tint_color">?android:attr/colorAccent</color>
     <color name="background_tab_pressed">#6633B5E5</color>
     <color name="icon_disabled">?android:attr/colorControlHighlight</color>
@@ -120,4 +113,8 @@ limitations under the License.
     <color name="theme_primary_dark">@*android:color/material_blue_grey_950</color>
     <color name="theme_accent">@*android:color/material_deep_teal_500</color>
     <color name="icon_disabled">?android:attr/colorControlHighlight</color>
+
+    <!-- Text Color for single button panel. See: app storage view -->
+    <color name="single_button_panel_button_text_color">@color/text_color_white</color>
+
 </resources>
