--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -70,6 +70,9 @@
     <string name="select_custom_activity_title">Select custom activity</string>
     <string name="select_custom_app_title">Select custom app</string>
 
+    <!-- Icon pick helper -->
+    <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
+
     <!-- Navigation Bar -->
     <string name="navbar_interface_title">Interface</string>
     <string name="navbar_size">Bar size</string>
