[SQUASHED] Implement XOSP Blur personalization options (2/2)
All credits for original work goes to serjar (Author of the very famous Xposed module: Blurred System UI)

Credits goes also to: Aaahh  for the initial implementation of it in MarshROM and continued by me after in XOSP

Original repository of the Xposed Module: https://github.com/serajr/Blurred-System-UI

** Available options

- Blurred expanded StatusBar
- Translucent Notifications
- Blurred StausBar header
- Blurred QS in Notification Header expanded
- Blurred Recent apps
- Ability to change Blur Radius and Blur scale

Signed-off-by: Calin <nilac8991@gmail.com>

Squashed commits

[SQUASHED] Blur: Major update (2/2)
Author nilac8991
https://github.com/XOSP-Project/android_packages_apps_Settings/commit/06fdcc89690054097a6a98a2525d62236d74d89c

Blur: Make sure the min value for Radius and Scale is 1
Author nilac8991
https://github.com/XOSP-Project/android_packages_apps_Settings/commit/2f786e192d85fc7e6af871aee240fd714c77cdad

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -22,6 +22,7 @@
     <string name="status_bar_battery_title">Battery</string>
     <string name="status_bar_clock_title">Clock and date style</string>
     <string name="status_bar_misc_title">Miscellaneous</string>
+    <string name="blur_title">Blur Settings</string>
 
     <!-- Expanded desktop -->
     <string name="expanded_desktop_category">Expanded Desktop</string>
@@ -280,5 +281,24 @@
     <string name="pulse_custom_div">Bar spacing</string>
     <string name="pulse_filled_block_size">Block size</string>
     <string name="pulse_empty_block_size">Block spacing</string>
+
+    <!-- Blur/transluency settings -->
+    <string name="blurred_status_bar_expanded_enabled_pref">Blur notification panel background</string>
+    <string name="blurred_status_bar_expanded_enabled_pref_summary">Expanded notification panel background blur</string>
+    <string name="blur_expstatus_cat">Notification Panel Background </string>
+    <string name="blurred_scale">Blur scale</string>
+    <string name="blurred_scale_summary">Quailty of blur image</string>
+    <string name="blurred_radius">Blur radius</string>
+    <string name="blurred_radius_summary">Amount of blur</string>
+    <string name="translucent_qs_cat">Quick Settings</string>
+    <string name="transluency_level_universal">Transluency level</string>
+    <string name="translucent_quick_settings_pref">Translucent quick settings panel</string>
+    <string name="translucent_quick_settings_pref_summary">Apply translucency to the quick settings panel </string>
+    <string name="translucent_header_cat">Status Bar Header</string>
+    <string name="translucent_header_pref">Translucent status bar header </string>
+    <string name="translucent_header_pref_summary">Apply translucency to the status bar header</string>
+    <string name="translucent_notifications_cat">Notifications</string>
+    <string name="translucent_notifications_pref">Translucent notifications</string>
+    <string name="translucent_notifications_pref_summary">Apply translucency to notifications</string>
 
 </resources>
