OMS7-N: Apps: show/hide Substratum overlays [2/2]
Default behavior is "hidden" substratum overlays,
as they pollute the screen, and you can't notice the
actual apps.
So we follow the current trend set by Android with
"show system" and make it "show overlays" on default.

Change-Id: I1cd4d4d3acd767a87fe402c325a872a4c04e0438

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -246,6 +246,11 @@
     <!-- Bluetooth settings. A checkbox to set if we should accept all the file types regardless of their presence in MIME type whitelist -->
     <string name="bluetooth_accept_all_files">Accept all file types</string>
 
+   <!-- Manage applications: show substratum overlays -->
+   <string name="filter_substratum_apps">Substratum overlays</string>
+   <string name="menu_show_substratum">Show overlays</string>
+   <string name="menu_hide_substratum">Hide overlays</string>
+
     <!-- Notification sound timeout -->
     <string name="app_notification_sound_timeout_title">Minimum time between notification sounds</string>
     <string name="app_notification_sound_timeout_summary_template">Allow sounds or vibration no more than once every <xliff:g id="duration">%1$s</xliff:g></string>
