Dynamically define currently installed vendor.img version *parse the vendor fingerprint for the vendor build id *automatically remove on devices without a vendor image
Thanks to @dwitherell for the help with the parsing logic :)

Change-Id: I56c476de5d85d309097a027b151850b3088f2941

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -45,6 +45,10 @@
     <string name="aosip_about_mention6_title">Rinky McBally</string>
     <string name="aosip_about_mention6_summary">AOSiP Graphics</string>
 
+    <!-- Vendor version -->
+    <string name="vendor_version">Vendor version</string>
+    <string name="vendor_version_default">Unknown</string>
+
     <!-- General strings -->
     <string name="ok">OK</string>
     <string name="reset">Reset</string>
