--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -127,6 +127,12 @@
 		android:title="@string/build_date"
 		android:summary="@string/device_info_default" />
 
+        <!-- Vendor Version -->
+        <Preference android:key="vendor_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/vendor_version"
+                android:summary="@string/vendor_version_default" />
+
         <!-- Detailed build version -->
         <Preference android:key="build_number"
                 android:enabled="false"
