--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012-2014 SlimRoms Project
+<!-- Copyright (C) 2007 The Android Open Source Project
+
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+
           http://www.apache.org/licenses/LICENSE-2.0
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -17,6 +20,12 @@
     <string name="mem_info">Memory</string>
     <string name="aosip_version">AOSiP Build</string>
     <string name="build_date">Build date</string>
+
+    <!-- AOSiP custom settings main -->
+    <string name="header_category_personalization">UI settings</string>
+    <string name="custom_title">OwlsNest</string>
+    <string name="aosip_title">AOSiP Settings</string>
+    <string name="owlsnest_settings_title">Categories</string>
 
     <!-- General strings -->
     <string name="ok">OK</string>
