Add summary for Substratum and App Ops dashboard tiles
Change-Id: I5596f0cc2399d7a9afc8bf26627611478da53d27

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -61,6 +61,9 @@
     <!-- substratum dashboard tile title -->
     <string name="substratum_settings_title">Substratum</string>
 
+    <string name="substratum_settings_summary">Theme your device</string>
+    <string name="appops_settings_summary">Control Apps permissions</string>
+
     <!-- Heads up -->
     <string name="headsup_section_header">Heads up notifications</string>
     <string name="heads_up_notifications">Heads up</string>
