Add dashboard summary to SuperSU
Change-Id: If8f98eff64b3b8e56246829119814af8ef25d9c1

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -228,6 +228,7 @@
 
     <!-- SuperSU header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
     <string name="supersu_title">SuperSU</string>
+    <string name="supersu_dashboard_summary">Manage root access</string>
 
     <!-- Scramble PIN Layout on Lockscreen -->
     <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
